# blog_site

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
app/: __init__.py  settings.py
app/admin/: __init__.py  admin.py  views.py
app/controllers/: __init__.py  _auth_backend.py
app/controllers/dependencies/: __init__.py  auth.py
app/controllers/managers/: model.py
app/controllers/routes/: __init__.py  auth.py  blog.py
app/controllers/schemas/: __init__.py  account.py  comment.py
app/database/: __init__.py  db.py
app/migrations/: env.py
app/models/: __init__.py  account.py  base.py
static/css/: blog_styles.css
static/templates/: base.jinja2  blog_all.jinja2  blog_form_create.html  blog_form_edit.html  blog_one.jinja2
